# pybigint

./: .gitignore  pyproject.toml
src/: bigint.py
src/examples/max_product/: max_product.py
